--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ img {
 <p class="subtitle">From “dei loosu”… to forever.</p>
 
 <h2>When We Were Just Friends 🤍</h2>
-<img src="PHOTO1_LINK_HERE">
+<img src="WhatsApp Image 2026-02-14 at 5.52.50 AM.jpeg">
 
 <h2>When Love Chose Us ❤️</h2>
 <img src="PHOTO2_LINK_HERE">
