--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ img {
 <img src="WhatsApp Image 2026-02-14 at 5.52.50 AM.jpeg">
 
 <h2>When Love Chose Us ❤️</h2>
-<img src="PHOTO2_LINK_HERE">
+<img src="image.png">
 
 <h3>Press play before you read this 🎵</h3>
 <iframe width="0" height="0" src="https://www.youtube.com/embed/r3zdGGm_HWE?autoplay=1&loop=1&playlist=r3zdGGm_HWE" frameborder="0" allow="autoplay"></iframe>
