--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>For My Pattu ❤️</title>
+<title> Pattu ❤️</title>
 <meta charset="UTF-8">
 <style>
 body {
@@ -57,13 +57,13 @@ img {
 
 <div class="container fade-in">
 
-<h1>Happy Valentine’s Day, My Pattu ❤️</h1>
-<p class="subtitle">From “dei loosu”… to forever.</p>
+<h1>Happy Valentine’s Day, Pattu ❤️</h1>
+<p class="subtitle">From your Kunjuzz.</p>
 
-<h2>When We Were Just Friends 🤍</h2>
+<h2> From Friends 🤍</h2>
 <img src="WhatsApp Image 2026-02-14 at 5.52.50 AM.jpeg">
 
-<h2>When Love Chose Us ❤️</h2>
+<h2> TO Love Chose Us ❤️</h2>
 <img src="image.png">
 
 <h3>Press play before you read this 🎵</h3>
